--- a/N1EEZB.WPF/App.xaml
+++ b/N1EEZB.WPF/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:N1EEZB.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="DictionaryMain.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
