--- a/N1EEZB.WPF/UserControlQueryStorages.xaml
+++ b/N1EEZB.WPF/UserControlQueryStorages.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="N1EEZB.WPF.UserControlQueryStorages"
+﻿<local:UserControlBase x:Class="N1EEZB.WPF.UserControlQueryStorages"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,13 +12,13 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Query Storages" Grid.Row="0" />
+        <TextBlock Text="Query Storages" Style="{StaticResource TextBlockHeader}" Grid.Row="0" />
 
-        <DataGrid Name="DataGridMain" Style="{StaticResource DataGridMain}" Grid.Row="1">
+        <DataGrid Name="DataGridMain" Style="{StaticResource DataGridQuery}" Grid.Row="1">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding StorageId}" />
+                <DataGridTextColumn Header="Storage ID" Binding="{Binding StorageId}" />
                 <DataGridTextColumn Header="Name" Binding="{Binding StorageName}" />
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</UserControl>
+</local:UserControlBase>
