--- a/N1EEZB.WPF/DictionaryMain.xaml
+++ b/N1EEZB.WPF/DictionaryMain.xaml
@@ -9,6 +9,7 @@
     <Style x:Key="ButtonToolbar" TargetType="Button">
         <Setter Property="Margin" Value="0 4" />
         <Setter Property="Width" Value="80" />
+        <Setter Property="VerticalAlignment" Value="Top" />
     </Style>
 
     <Style x:Key="ImageToolbar" TargetType="Image">
@@ -16,6 +17,7 @@
         <Setter Property="Height" Value="32" />
         <Setter Property="Margin" Value="0 4" />
         <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Top" />
     </Style>
 
     <Style x:Key="TextBlockToolbar" TargetType="TextBlock">
@@ -30,6 +32,29 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="FontSize" Value="24" />
         <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style x:Key="TextBlockLabel" TargetType="TextBlock">
+        <Setter Property="Margin" Value="15 8" />
+        <Setter Property="FontSize" Value="16" />
+    </Style>
+
+    <Style x:Key="TextBoxData" TargetType="TextBox">
+        <Setter Property="Margin" Value="15 8" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Width" Value="250" />
+    </Style>
+
+    <Style x:Key="ComboBoxData" TargetType="ComboBox">
+        <Setter Property="Margin" Value="15 8" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Width" Value="250" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+    </Style>
+
+    <Style x:Key="ButtonAction" TargetType="Button">
+        <Setter Property="Margin" Value="40 8" />
+        <Setter Property="FontSize" Value="16" />
     </Style>
 
     <Style x:Key="StackPanelFilter" TargetType="StackPanel">
