--- a/N1EEZB.WPF/UserControlModifyItem.xaml
+++ b/N1EEZB.WPF/UserControlModifyItem.xaml
@@ -1,4 +1,4 @@
-﻿<local:UserControlBase x:Class="N1EEZB.WPF.UserControlCreateItem"
+﻿<local:UserControlBase x:Class="N1EEZB.WPF.UserControlModifyItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,10 +12,11 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Create New Item" Style="{StaticResource TextBlockHeader}" Grid.Row="0" />
+        <TextBlock Text="Modify Item" Style="{StaticResource TextBlockHeader}" Grid.Row="0" />
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
+                <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -28,11 +29,12 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Item Type:" Grid.Row="0" Grid.Column="0" Style="{StaticResource TextBlockLabel}" />
-            <ComboBox Name="ComboBoxItemType" DisplayMemberPath="ItemTypeName" Grid.Row="0" Grid.Column="1" Style="{StaticResource ComboBoxData}" />
+            <TextBlock Text="Item:" Grid.Row="0" Grid.Column="0" Style="{StaticResource TextBlockLabel}" />
+            <ComboBox Name="ComboBoxItem" DisplayMemberPath="ItemName" Grid.Row="0" Grid.Column="1" Style="{StaticResource ComboBoxData}"
+                      SelectionChanged="ComboBoxItem_SelectionChanged" />
 
             <TextBlock Text="Item Code:" Grid.Row="1" Grid.Column="0" Style="{StaticResource TextBlockLabel}" />
-            <TextBox Name="TextBoxItemCode" MaxLength="20" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxData}" />
+            <TextBlock Name="TextBlockItemCode" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBlockLabel}" />
 
             <TextBlock Text="Item Name:" Grid.Row="2" Grid.Column="0" Style="{StaticResource TextBlockLabel}" />
             <TextBox Name="TextBoxItemName" MaxLength="40" Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxData}" />
@@ -40,8 +42,12 @@
             <TextBlock Text="GTIN-14:" Grid.Row="3" Grid.Column="0" Style="{StaticResource TextBlockLabel}" />
             <TextBox Name="TextBoxGTIN14" MaxLength="14" Grid.Row="3" Grid.Column="1" Style="{StaticResource TextBoxData}" />
 
-            <Button Name="ButtonCreate" Content="Create Item" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ButtonAction}"
-                    Click="ButtonCreate_Click" />
+            <Button Name="ButtonModify" Content="Modify" Style="{StaticResource ButtonAction}" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
+                    Click="ButtonModify_Click" />
+
+            <Button Name="ButtonDelete" Content="Delete" Style="{StaticResource ButtonAction}" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
+                    Click="ButtonDelete_Click" />
         </Grid>
+
     </Grid>
 </local:UserControlBase>
